# scanner

./: .gitattributes  .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  typos.toml
.github/workflows/: ci.yml  release.yml  scheduled.yml
crates/engine/: Cargo.toml
crates/engine/benches/: hash_bench.rs  walk_bench.rs
crates/engine/src/: error.rs  lib.rs  scanner.rs
crates/engine/tests/: smoke.rs
crates/format/: Cargo.toml
crates/format/src/: detect.rs  lib.rs
crates/hash/: Cargo.toml
crates/hash/src/: lib.rs  md5.rs  partial.rs  sha256.rs  xxhash.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: audio.rs  document.rs  exif.rs  lib.rs  types.rs  video.rs
crates/output/: Cargo.toml
crates/output/src/: lib.rs  ndjson.rs  record.rs
crates/phash/: Cargo.toml
crates/phash/src/: lib.rs  phash.rs
crates/walker/: Cargo.toml
crates/walker/src/: checkpoint.rs  filter.rs  lib.rs  walk.rs
scanfs/: Cargo.toml
scanfs/src/: cli.rs  item.rs  main.rs  normalize.rs  options.rs  render.rs  run.rs
scanfs/tests/: parity.rs
scanner/: Cargo.toml
scanner/src/: lib.rs
schema/: file_record_v1.schema.json
