[package]
name = "scanner-metadata"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Metadata extraction helpers used by scanner-core."
repository = "https://github.com/organizyio/scanner"

[lib]
name = "metadata"

[dependencies]
kamadak-exif = "0.6"
lofty = "0.22"
lopdf = "0.34"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wait-timeout = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
