[package]
name = "scanner-output"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Output record types and rendering helpers used by scanner-core."
repository = "https://github.com/organizyio/scanner"

[lib]
name = "output"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
